--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <link rel="stylesheet" type="text/css" href="../TriviaGame/assets/css/style.css">
 </head>
 <body>
-	<div>
-		<h1>Tecmo Bowl Trivia</h1>
-	</div>
-	<div>
-		<h2>Time Remaining:<span id="timeRemaining"></span></h2>
-	</div>
-	<div id="triviaQA">
-	</div>
+	
+		<div class="gamePlay" align="center">
+			<div>
+				<h1>Tecmo Bowl Trivia</h1>
+			</div>
+			<div>
+				<h2>Time Remaining:<span id="timeRemaining"></span></h2>
+			</div>
+			<div id="triviaQA">
+			</div>
+		</div>
+	
 
 </body>
 </html>
